k8s/b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec: 
  selector:
    app: backend
  ports: 
  - port: 5000
    targetPort: 5000
  type: ClusterIP
